...
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="Back" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:onClick="save"
            android:text="Save" />
    </LinearLayout>

    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="Place your event name here: "
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLines="2"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/eventDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/locationTextView"
        android:layout_below="@+id/locationTextView"
        android:layout_marginTop="18dp"
        android:hint="Place your short description here: "
...


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/eventDay"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/date_box_border"
            android:hint="@string/event_date"
            android:padding="15dp"
...
            android:textSize="20sp"
            android:textStyle="bold"
            android:focusable="false"
            />

        <EditText
            android:id="@+id/eventTime"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/date_box_border"
            android:hint="@string/event_time"
            android:padding="15dp"
...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/removeServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/yourServicesTextView"
            android:src="@android:drawable/button_onoff_indicator_on"
            android:layout_alignBottom="@+id/addServiceButton" />

        <ImageButton
            android:id="@+id/addServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
...
            android:textSize="30sp"
            android:layout_marginTop="27dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ScrollView
            android:id="@+id/ServiceScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/removeServiceButton"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:id="@+id/ServiceScrollLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
...
